# LogConsole

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  run.sh
docs/: PRD-advanced-search.md  highlight-template-design.md  log-console-prd.md  prototype-design-prompt.md
logconsole/: __init__.py  main.py
logconsole/core/: highlight_template.py  keyword_highlight.py  log_parser.py  search_engine.py  template_manager.py
logconsole/tests/: test_log_parser.py  test_search_engine.py
logconsole/ui/: apple_hig_theme.py  highlight_engine.py  highlight_panel.py  main_window.py  minimap.py  search_dialog.py  virtual_log_viewer.py
